--- a/app/src/main/res/menu/menu_arithmetic.xml
+++ b/app/src/main/res/menu/menu_arithmetic.xml
@@ -13,6 +13,9 @@
     <item android:id="@+id/action_pick_num" android:title="@string/menu_show_num_picker"
         android:orderInCategory="100" app:showAsAction="ifRoom" />
 
+    <item android:id="@+id/action_review_incorrect" android:title="@string/menu_review"
+        android:orderInCategory="100" app:showAsAction="ifRoom" />
+
     <item android:id="@+id/action_reset" android:title="@string/menu_reset"
         android:orderInCategory="100" app:showAsAction="never" />
 
